--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -16,12 +16,12 @@
         android:paddingVertical="8dp">
 
         <CheckBox
-            android:id="@+id/cb_todo"
+            android:id="@+id/cb_task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/tv_todo"
+            android:id="@+id/tv_task"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
